### Add patch version (HEAD -> main)
>Thu, 4 Jul 2024 16:07:08 +0200

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)




### Fix docker compose (tag: 1.1.1)
>Thu, 4 Jul 2024 16:05:41 +0200

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)




### FixDokerfile (origin/main, origin/HEAD)
>Thu, 27 Jun 2024 04:12:56 +0200

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)




### Fix dockerfile
>Thu, 27 Jun 2024 03:58:42 +0200

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)




### Again a try
>Thu, 27 Jun 2024 01:53:59 +0200

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)




### Test create docker ftom github
>Thu, 27 Jun 2024 01:49:50 +0200

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)




### Fix dockerfile
>Thu, 27 Jun 2024 01:41:40 +0200

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)




### Update to 1.1.0 (tag: v1.1.0)
>Thu, 27 Jun 2024 01:30:28 +0200

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)




### Handle ows:ExceptionReport
>Thu, 27 Jun 2024 01:28:05 +0200

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)




### Migrate to toml
>Thu, 27 Jun 2024 01:27:34 +0200
