@@ -78,6 +78,7 @@ jpype1 = "^1.5.0"
 lxml = "^5.2.2"
 requests = "^2.32.3"
 tqdm = "^4.66.4"
+xmltodict = "^0.13.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
